--- a/index.html
+++ b/index.html
@@ -3,29 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luis Miguel</title>
+    <title>Pruebas</title>
 </head>
 <body>
-    <h1>Informacion</h1>
-    <a href="storage/data/infoPersonal.json" target="_blank" rel="noopener noreferrer">
-        <h3>
-            <strong>Informacion</strong> <em>Personal</em>
-        </h3>
-    </a>
-    <br>
-    <a href="storage/data/infoEducativa.json" target="_blank" rel="noopener noreferrer">
-        <h3>
-            Informacion Educatica
-        </h3>
-    </a>
-    <br>
-    <a href="storage/data/infoLaboral.json" target="_blank" rel="noopener noreferrer">
-        <h3>
-            Informacion Laboral
-        </h3>
-    </a>
-    <br>
-
+    <h1>Imagenes</h1>
+    <a href="imagenes.html" target="_blank" rel="Galeria">Galeria</a>
 </body>
 </html>
-
