feat: :sparkles: Yoyo animacion

--- a/index.html
+++ b/index.html
@@ -4,29 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/media.css">
-    <title>Pruebas</title>
+    <title>lluvia</title>
 </head>
 <body>
-    <div class="fila">
-        <div class="caja1">
-            <div class="subcaja">subcaja1</div>
+    <div id="anim">
+        <div id="mensajes"></div>
+        <div id="nube">
+            <div id="lluvia"></div>
         </div>
-        <div class="caja2">
-            <div class="subcaja">subcaja2</div>
-            <div class="subcaja">subcaja3</div>
-        </div>
+        <div id="sol"></div>
+        <div id="flor"></div>     
     </div>
-    <div class="fila2">
-        <div class="caja3">
-            <div class="subcaja">subcaja4</div>
-        </div>
-    </div>
-    <div class="fila2">
-        <div class="caja4">
-            <div class="subcaja">subcaja5</div>
-            <div class="subcaja">subcaja6</div>
-        </div>
-    </div>
+    
 </body>
 </html>
